[gd_scene load_steps=5 format=3 uid="uid://drbcq0t7ip4vb"]

[ext_resource type="Script" path="res://common/scenes/TitleChapter/chapter_scene.gd" id="1_5jxlv"]
[ext_resource type="FontFile" uid="uid://de7weonfsghce" path="res://Fonts/Almendra/Almendra-Regular.ttf" id="2_rjra0"]
[ext_resource type="PackedScene" uid="uid://bdfadysrxjhk6" path="res://common/scenes/fadeTransition/Fade Transition.tscn" id="2_yveob"]
[ext_resource type="FontFile" uid="uid://bx762d1lay4yf" path="res://Fonts/Lugrasimo/Lugrasimo-Regular.ttf" id="3_pw76q"]

[node name="ChapterScene" type="Node2D"]
script = ExtResource("1_5jxlv")

[node name="FadeTransition" parent="." instance=ExtResource("2_yveob")]
z_index = 5

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="chapterLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rjra0")
theme_override_font_sizes/font_size = 130
text = "Chapter 2"
horizontal_alignment = 1

[node name="ReferenceRect" type="ReferenceRect" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="titleLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_pw76q")
theme_override_font_sizes/font_size = 40
text = "Vow of Silence"
horizontal_alignment = 1
